--- a/Chart.yaml
+++ b/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
 appVersion: "1.0"
-description: Creates service to enable debugging bespin jobs
+description: Creates service to enable debugging a bespin job
 name: bespin-debug
 version: 0.1.0
